--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -29,6 +29,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Pnpm
+        id: setup-pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: latest
+
       - name: Cache Node Modules
         id: cache-node-modules
         uses: actions/cache@v4
@@ -38,10 +44,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       
-      - name: Setup Pnpm
-        id: setup-pnpm
-        uses: pnpm/action-setup@v3
-
       - name: Get pnpm store directory
         shell: bash
         run: |
