--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -20,9 +20,6 @@ name: deploy-docs
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [21]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -34,6 +31,12 @@ jobs:
         uses: pnpm/action-setup@v3
         with:
           version: latest
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 21
+          cache: pnpm
 
       - name: Cache Node Modules
         id: cache-node-modules
