--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
   "homepage": "https://x.com",
   "repository": "DvShu/classic-tutorial",
   "bugs": "https://github.com/DvShu/classic-tutorial/issues",
-  "keywords": ["demo", "tutorial"],
+  "keywords": [
+    "demo",
+    "tutorial"
+  ],
   "author": "DvShu <joel.shu@qq.com>",
-  "contributors": ["DvShu"],
+  "contributors": [
+    "DvShu"
+  ],
   "engines": {
     "node": ">=18.0.0"
   },
   "scripts": {
-    "dev": "rspress dev",
-    "build": "rspress build",
-    "preview": "rspress preview"
-  },
-  "dependencies": {
-    "rspress": "^1.28.0"
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
-    "@types/node": "^22.4.0"
+    "@types/node": "^22.4.2",
+    "vitepress": "^1.3.3"
   }
 }
