--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,6 @@
     "target": "ES2020",
     "lib": ["DOM", "ES2020"],
     "module": "ESNext",
-    "jsx": "react-jsx",
     "noEmit": true,
     "strict": true,
     "skipLibCheck": true,
@@ -13,8 +12,6 @@
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["docs", "theme", "rspress.config.ts"],
-  "mdx": {
-    "checkMdx": true
-  }
+  "include": ["docs", "src"],
+  "exclude": ["node_modules"]
 }
