--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.2",
     "@types/node": "^22.4.2",
+    "prettier": "^3.3.3",
     "vitepress": "^1.3.3"
   },
-  "packageManager": "pnpm@9.7.1"
+  "packageManager": "pnpm@9.7.1",
+  "dependencies": {
+    "vue": "^3.4.38"
+  }
 }
