--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["docs", "src"],
+  "include": ["docs"],
   "exclude": ["node_modules"]
 }
