--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
     "@types/node": "^22.4.2",
+    "less": "^4.2.0",
     "prettier": "^3.3.3",
     "vitepress": "^1.3.3"
   },
