--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.7.5",
     "less": "^4.2.0",
     "prettier": "^3.3.3",
-    "vitepress": "^1.3.4"
+    "vitepress": "^1.4.0"
   },
   "packageManager": "pnpm@9.7.1",
   "dependencies": {
-    "vue": "^3.4.38"
+    "@asteres/player": "^0.0.1",
+    "vue": "^3.5.11"
   }
 }
